--- a/login-css.css
+++ b/login-css.css
@@ -108,29 +108,28 @@ body {
 }
 
 .signup-only {
-  display: none; /* Hidden by default for login */
+  display: none;
 }
 
 .password-container {
   position: relative;
   width: 100%;
-  /* margin-bottom: 1rem; */
 }
 
 .password-container input {
   width: 100%;
-  padding: 0.8rem 2.5rem 0.8rem 0.8rem; /* Right padding for icon space */
+  padding: 0.8rem 2.5rem 0.8rem 0.8rem;
   border: 1px solid var(--text-light);
   border-radius: 5px;
   font-size: 1rem;
   color: var(--text-dark);
   font-family: var(--header-font);
-  box-sizing: border-box; /* Ensure padding doesn’t increase width */
+  box-sizing: border-box;
 }
 
 .toggle-password {
   position: absolute;
-  right: 0.8rem; /* Distance from right edge */
+  right: 0.8rem;
   top: 50%;
   transform: translateY(-50%);
   font-size: 1.2rem;
