--- a/style.css
+++ b/style.css
@@ -252,6 +252,19 @@ nav {
   cursor: pointer;
 }
 
+.modal-content {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Adjust width */
+}
+
+.modal-footer {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .overlay {
   position: fixed;
   top: 0;
@@ -545,7 +558,8 @@ nav {
 .notification {
   position: fixed;
   top: 1%;
-  right: 40%;
+  left: 50%;
+  transform: translateX(-50%);
   padding: 1rem 2rem;
   border-radius: 5px;
   color: #fff;
@@ -553,7 +567,7 @@ nav {
   z-index: 1000;
   display: none;
   text-align: center;
-  max-width: 100%;
+  max-width: 90%;
   background-color: var(--text-light);
 }
 
@@ -1753,6 +1767,10 @@ nav {
   padding: 1rem 1rem;
 }
 
+#cartTitle {
+  padding-bottom: 1rem;
+}
+
 .cart__grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -1866,6 +1884,12 @@ nav {
     margin: auto;
     padding: 7rem 1rem;
   }
+  #footerLogoText {
+    width: 390px;
+  }
+  .pet-profile__carousel {
+    height: 200px;
+  }
 }
 
 @media (width > 540px) {
@@ -1930,7 +1954,7 @@ nav {
   }
 
   .pet-profile__container {
-    padding-top: 7rem;
+    padding-top: 8rem;
     text-align: center;
   }
 }
